@@ -7,6 +7,7 @@
 - Fixed problems with SkipTest in Python 3.2 (#389)
 - Fixes Xunit plugin to handle non-UTF8 characters (#395)
 - Makes --plugins more succinct when there are no options (#235)
+- Fixes capture plugin for cases involving non-ascii exception messages (#402)
 - Fixed bug in doctest plugin under python 3. Thanks to Thomas Kluyver
   for the patch. (#391)
 - Fixed bug in tests for twisted tools. Thanks to Thomas Kluyver
